Apply suggestions from code review
Co-authored-by: Paolo Bizzarri <pibizza@gmail.com>

--- a/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
+++ b/kie-wb-common-ala/kie-wb-common-ala-ui/kie-wb-common-ala-ui-client/src/main/resources/org/guvnor/ala/ui/client/resources/i18n/GuvnorAlaUIConstants_it.properties
@@ -110,7 +110,7 @@ RuntimePresenter.PipelineExecutionDeleteAction=Elimina l''esecuzione della pipel
 RuntimePresenter.PipelineExecutionShowErrorAction=Mostra l''errore della pipeline
 RuntimePresenter.PipelineExecutionStopSuccessMessage=Esecuzione pipeline: {0} arrestata con successo
 RuntimePresenter.PipelineExecutionDeleteSuccessMessage=Esecuzione pipeline: {0} eliminata con successo
-RuntimePresenter.PipelineExecutionConfirmDeleteTitle=Elimina registrazione esecuzione pipeline
+RuntimePresenter.PipelineExecutionConfirmDeleteTitle=Elimina la registrazione dell''esecuzione della pipeline
 RuntimePresenter.PipelineExecutionConfirmDeleteMessage=Sei sicuro di voler eliminare la registrazione dell''esecuzione della pipeline?
 RuntimePresenter.PipelineExecutionConfirmStopTitle=Arresta l''esecuzione della pipeline
 RuntimePresenter.PipelineExecutionConfirmStopMessage=Sei sicuro di voler arrestare la pipeline?
