--- a/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-dynamic-forms/kie-wb-common-dynamic-forms-client/src/main/resources/org/kie/workbench/common/forms/dynamic/client/resources/i18n/FormRenderingConstants_it.properties
@@ -50,7 +50,7 @@ ListBoxFieldRenderer.emptyOptionText=-- Seleziona un valore --
 
 FieldProperties.maxDropdownElements=Elementi visibili nella selezione
 FieldProperties.maxElementsOnTitle=Elementi visibili nel titolo della selezione
-FieldProperties.allowFilter=Mostra filtro di ricerca
+FieldProperties.allowFilter=Mostra il filtro di ricerca
 FieldProperties.allowClearSelection=Mostra l''azione di cancellazione della selezione
 
 FieldProperties.listOfValues=Elementi del selettore
