--- a/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-editor/kie-wb-common-forms-editor-client/src/main/resources/org/kie/workbench/common/forms/editor/client/resources/i18n/FormEditorConstants_it.properties
@@ -39,7 +39,7 @@ FormDefinitionResourceType.formTypeShortName=Modulo
 FormDefinitionResourceType.formTypeDescription=Moduli
 
 DataObjectsAdminViewImpl.dataObjectID=Identificatore del''oggetto dati
-DataObjectsAdminViewImpl.dataObjectType=Tipo oggetto dati
+DataObjectsAdminViewImpl.dataObjectType=Tipo dell''oggetto dati
 DataObjectsAdminViewImpl.addDataObject=Aggiungi un oggetto dati
 DataObjectsAdminViewImpl.idCannotBeEmpty=L''ID dell''oggetto dati non può essere vuoto.
 DataObjectsAdminViewImpl.idAreadyExists=L''ID dell''oggetto dati deve essere univoco, esiste già un oggetto dati con lo stesso ID.
@@ -51,7 +51,7 @@ DataObjectsAdminViewImpl.areYouSureRemoveDataObject=Sei sicuro di voler rimuover
 
 FieldPropertiesRendererViewImpl.title=Proprietà del campo
 FieldPropertiesRendererViewImpl.fieldType=Tipo del campo
-FieldPropertiesRendererViewImpl.fieldBinding=Associazione campo
+FieldPropertiesRendererViewImpl.fieldBinding=Associazione del campo
 
 ChangesNotificationDisplayer.title=Notifica - Ci sono alcune modifiche nel tuo modulo.
 
@@ -64,7 +64,7 @@ ModelProperty.typeConflict1=: La proprietà del modello a cui era associato ('{0
 ModelProperty.typeConflict2=Il campo del modulo verrà cambiato nel tipo di campo corretto. Per favore, modifica le proprietà del campo e verifica che le impostazioni siano corrette.
 
 NestedFormsConflictHandler.nestedForm=: Il campo SottoModulo è configurato per utilizzare un modulo che non esiste.
-NestedFormsConflictHandler.creationForm=: Il campo MultipleSottoModulo sta cercando di utilizzare un modulo per la creazione di istanze che non esiste.
+NestedFormsConflictHandler.creationForm=: Il campo MultiSottoModulo sta cercando di utilizzare un modulo per la creazione di istanze che non esiste.
 NestedFormsConflictHandler.editionForm=: Il campo MultiSottoModulo sta cercando di utilizzare un modulo per la modifica di istanze che non esiste.
 NestedFormsConflictHandler.fix=Le impostazioni del campo verranno modificate per evitare problemi, per favore modifica il campo e seleziona il modulo corretto.
 
