--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_it.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants_it.properties
@@ -93,7 +93,7 @@ NewTemplateView.Name=Nome:
 NewTemplateView.new-template-name-textbox-placeholder=Nome della configurazione
 NewTemplateView.NewServerTemplateWizardSaveError=Errore nella creazione della nuova configurazione del server.
 NewTemplateView.NewServerTemplateWizardSaveSuccess=Nuova configurazione del server creata.
-NewTemplateView.NewServerTemplateWizardTitle=Nuova configurazione server
+NewTemplateView.NewServerTemplateWizardTitle=Nuova configurazione del server
 NewTemplateView.PlanningCheckBoxText=Pianificatore
 NewTemplateView.ProcessCheckBoxText=Processo
 NewTemplateView.RuleCheckBoxText=Decisione
